--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "code-blast-codemirror",
   "version": "1.0.0",
-  "description": "This is a quick Codemirror port of [lovely experiement by Joel Besada](https://twitter.com/JoelBesada/status/670343885655293952).",
+  "description": "This is a quick Codemirror port of [lovely experiment by Joel Besada](https://twitter.com/JoelBesada/status/670343885655293952).",
   "main": "code-blast.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,7 +12,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/chinchang/code-blast-codemirror/issues"
   },
